Fixed body overflow-x issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 body {
     background-image: url('../images/houndstooth-pattern.png');
     background-repeat: repeat;   
-    overflow: hidden;    
+    overflow-x: hidden;
 }
 .header {
     background: #0342dc;
